--- a/dist.ini
+++ b/dist.ini
@@ -17,11 +17,13 @@ url=/App/HTTPUserAgentUtils/parse_http_ua
 perl=5.010001
 strict=0
 warnings=0
-HTML::ParseBrowser=0
+HTTP::BrowserDetect=0
 WWW::UserAgent::Random=0
+
+[Prereqs / RuntimeRecommends]
+HTML::ParseBrowser=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.87
-
