--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,13 @@ name=App-HTTPUserAgentUtils
 
 [GenPericmdScript / GenPericmdScript gen-random-http-ua]
 url=/App/HTTPUserAgentUtils/gen_random_http_ua
+read_env=0
+read_config=0
 
 [GenPericmdScript / GenPericmdScript parse-http-ua]
 url=/App/HTTPUserAgentUtils/parse_http_ua
+read_env=0
+read_config=0
 
 [InsertExecsList]
 
