[ux] Add shorter alias for gen-random-http-ua: random-http-ua

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,13 @@ url=/App/HTTPUserAgentUtils/gen_random_http_ua
 read_env=0
 read_config=0
 
+; ux, shorter alias
+[GenPericmdScript / GenPericmdScript rand-http-ua]
+name=rand-http-ua
+url=/App/HTTPUserAgentUtils/gen_random_http_ua
+read_env=0
+read_config=0
+
 [GenPericmdScript / GenPericmdScript parse-http-ua]
 url=/App/HTTPUserAgentUtils/parse_http_ua
 read_env=0
