Add utility: http-ua-by-nickname

--- a/dist.ini
+++ b/dist.ini
@@ -29,6 +29,7 @@ perl=5.010001
 strict=0
 warnings=0
 HTTP::BrowserDetect=0
+HTTP::UserAgentStr::Util::ByNickname=0
 WWW::UserAgent::Random=0
 
 [Prereqs / RuntimeRecommends]
@@ -38,3 +39,4 @@ HTML::ParseBrowser=0
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.87
+
