--- a/dist.ini
+++ b/dist.ini
@@ -2,8 +2,18 @@ version=0.001
 
 name=App-HTTPUserAgentUtils
 
+[GenPericmdScript / GenPericmdScript http-ua-by-nickname]
+url=/App/HTTPUserAgentUtils/http_ua_by_nickname
+read_env=0
+read_config=0
+
 [GenPericmdScript / GenPericmdScript gen-random-http-ua]
 url=/App/HTTPUserAgentUtils/gen_random_http_ua
+read_env=0
+read_config=0
+
+[GenPericmdScript / GenPericmdScript parse-http-ua]
+url=/App/HTTPUserAgentUtils/parse_http_ua
 read_env=0
 read_config=0
 
@@ -11,11 +21,6 @@ read_config=0
 [GenPericmdScript / GenPericmdScript rand-http-ua]
 name=rand-http-ua
 url=/App/HTTPUserAgentUtils/gen_random_http_ua
-read_env=0
-read_config=0
-
-[GenPericmdScript / GenPericmdScript parse-http-ua]
-url=/App/HTTPUserAgentUtils/parse_http_ua
 read_env=0
 read_config=0
 
@@ -39,4 +44,3 @@ HTML::ParseBrowser=0
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.87
-
